--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:image" content="images/previewSiteImg.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <title>Runner Game</title>
+    <title>Typing Game</title>
   </head>
   <body>
     <div id="root"></div>
